# health-app-demo

./: .gitignore  README.md  base.yml  docker-compose.yml
api/django_project/: manage.py  pyproject.toml
api/django_project/django_project/: asgi.py  auth_utils.py  celery.py  celery_readiness.py  logging_handler.py  settings.py  urls.py  wsgi.py
api/django_project/rest_api/: channels.py
api/django_project/rest_api/analytics/: appointment.py  prescription.py  schema.py
api/django_project/rest_api/events/: patient.py
api/django_project/rest_api/factory/: repo.py
api/django_project/rest_api/migrations/: 0001_initial.py  0002_alter_openinghourmodel_end_time_and_more.py  0003_alter_openingtimeexceptionmodel_end_datetime_and_more.py  0004_alter_practicemodel_slug_alter_staffmodel_job_title.py  0005_alter_patientmodel_city_alter_patientmodel_country_and_more.py  0006_alter_appointmentmodel_priority.py  0007_alter_prescriptionmodel_pharmacy_name.py  0008_pharmacymodel_remove_prescriptionmodel_pharmacy_name_and_more.py  0009_remove_prescriptionmodel_prescription_name_and_more.py  0010_rename_quantiy_prescriptionlineitemmodel_quantity.py  0011_alter_appointmentmodel_state_and_more.py  0012_appointmentstatelogmodel.py  0013_prescriptionstatelogmodel.py  0014_appointmentcommentmodel.py  0015_prescriptioncommentmodel.py  0016_appointmentmodel_assigned_to_and_more.py  0017_remove_staffmodel_is_bookable_and_more.py  0018_staffmodel_practice.py  0019_appointmentassignlogmodel.py  0020_appointmentviewedlogmodel.py  0021_appointmentstatelogmodel_transition_away_at_and_more.py  0022_prescriptionassignlogmodel_and_more.py  0023_patientpracticemodel.py  0024_practicefeatureflagmodel.py  0025_practicefeatureflagmodel_backfill.py  (+4 more)
infrastructure/: jobs.yaml  (+2 more)
(+281 files in other folders)
